# course_stm32_2022

./: README.md  course_2015a.slx  course_2022.slx  coursework_2016.m  coursework_2022.m  iirtdf2.m  Пояснительная записка МК.docx
KURS/: CMakeLists.txt  README.md
KURS/src/: main.c
KURS/toolchain/: arm-none-eabi-gcc.cmake  doxyconfig.cfg  openocd_jlink.cfg  openocd_stlink.cfg  write.sh
c_filter/: CMakeLists.txt  main.c  old_version.txt
libopencm3/include/libopencm3/stm32/common/: gpio_common_all.h  spi_common_all.h  spi_common_v1.h  usart_common_all.h  usart_common_f124.h
libopencm3/include/libopencm3/stm32/f4/: rcc.h
Для скрины для записки/: Данные.xlsx
